[package]
name = "openapi-path-filter"
version = "0.1.8"
edition = "2021"

[lib]
crate-type = ["cdylib"]      # WASM 모듈로 컴파일하기 위해 필요
name = "openapi_path_filter" # 라이브러리 이름은 반드시 언더스코어 사용
path = "src/lib.rs"          # 라이브러리 소스 위치


[dependencies]
proxy-wasm = "0.2.2"
serde_json = "1.0.139"
matchit = "0.8.6"
log = "0.4.26"

[dev-dependencies]
# proxy-wasm-test-framework = { git = "https://github.com/proxy-wasm/test-framework" }
